// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`DecimalRangeActionSheet renders correctly 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "style": undefined,
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "ref": {
              "current": null,
            },
            "style": {
              "left": 999999,
              "position": "absolute",
              "top": 999999,
            },
          },
          "type": "SafeAreaView",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "onTouchEnd": [Function],
                    "onTouchMove": [Function],
                    "onTouchStart": [Function],
                    "style": {
                      "backgroundColor": "black",
                      "height": "100%",
                      "opacity": 0.3,
                      "position": "absolute",
                      "width": "100%",
                      "zIndex": 1,
                    },
                    "testID": undefined,
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "aria-role": "button",
                        "onLongPress": [Function],
                        "onPress": [Function],
                        "style": {
                          "height": 933.8,
                          "width": "100%",
                        },
                      },
                      "type": "Pressable",
                    },
                  ],
                  "props": {
                    "onTouchEnd": [Function],
                    "onTouchMove": [Function],
                    "onTouchStart": [Function],
                    "style": {
                      "height": 933.8,
                      "width": "100%",
                      "zIndex": 10,
                    },
                    "testID": undefined,
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": [
                              {
                                "alignSelf": "center",
                                "backgroundColor": "#f0f0f0",
                                "borderRadius": 100,
                                "height": 6,
                                "marginVertical": 5,
                                "width": 45,
                              },
                              {
                                "backgroundColor": "#f0f0f0",
                              },
                            ],
                            "testID": undefined,
                          },
                          "type": "View",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    {
                                      "$$typeof": Symbol(react.test.json),
                                      "children": [
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": [
                                            {
                                              "$$typeof": Symbol(react.test.json),
                                              "children": [
                                                {
                                                  "$$typeof": Symbol(react.test.json),
                                                  "children": [
                                                    "Close",
                                                  ],
                                                  "props": {
                                                    "style": {
                                                      "color": "#092E3A",
                                                      "fontSize": 16,
                                                      "fontWeight": "700",
                                                    },
                                                  },
                                                  "type": "Text",
                                                },
                                              ],
                                              "props": {
                                                "style": {
                                                  "flexDirection": "row",
                                                },
                                                "testID": undefined,
                                              },
                                              "type": "View",
                                            },
                                          ],
                                          "props": {
                                            "style": {
                                              "flexDirection": "row",
                                            },
                                            "testID": undefined,
                                          },
                                          "type": "View",
                                        },
                                      ],
                                      "props": {
                                        "accessibilityHint": "Press to perform action",
                                        "accessibilityLabel": "Close",
                                        "accessibilityRole": "button",
                                        "accessibilityState": {
                                          "disabled": false,
                                        },
                                        "disabled": false,
                                        "onPress": [Function: debounced],
                                        "style": {
                                          "alignItems": "center",
                                          "alignSelf": "flex-start",
                                          "backgroundColor": "#0E9DCD",
                                          "borderColor": undefined,
                                          "borderRadius": 360,
                                          "borderWidth": undefined,
                                          "flexDirection": "column",
                                          "height": undefined,
                                          "justifyContent": "center",
                                          "paddingHorizontal": 20,
                                          "paddingVertical": 8,
                                          "width": "auto",
                                        },
                                        "testID": undefined,
                                      },
                                      "type": "PressableScale",
                                    },
                                  ],
                                  "props": {
                                    "onPointerEnter": [Function: AsyncFunction],
                                    "onPointerLeave": [Function: AsyncFunction],
                                    "style": {
                                      "width": "33%",
                                    },
                                    "testID": undefined,
                                  },
                                  "type": "View",
                                },
                              ],
                              "props": {
                                "onPointerEnter": [Function: AsyncFunction],
                                "onPointerLeave": [Function: AsyncFunction],
                                "style": {
                                  "alignItems": "flex-end",
                                  "flex": undefined,
                                  "width": "100%",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    {
                                      "$$typeof": Symbol(react.test.json),
                                      "children": [
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "0",
                                            "value": "0",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "1",
                                            "value": "1",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "2",
                                            "value": "2",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "3",
                                            "value": "3",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "4",
                                            "value": "4",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "5",
                                            "value": "5",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "6",
                                            "value": "6",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "7",
                                            "value": "7",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "8",
                                            "value": "8",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "9",
                                            "value": "9",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "10",
                                            "value": "10",
                                          },
                                          "type": "Picker.Item",
                                        },
                                      ],
                                      "props": {
                                        "itemStyle": {
                                          "height": 104,
                                        },
                                        "onValueChange": [Function],
                                        "selectedValue": "5",
                                        "style": {
                                          "backgroundColor": "#FFFFFF",
                                          "height": 104,
                                        },
                                      },
                                      "type": "Picker",
                                    },
                                  ],
                                  "props": {
                                    "onPointerEnter": [Function: AsyncFunction],
                                    "onPointerLeave": [Function: AsyncFunction],
                                    "style": {
                                      "width": "50%",
                                    },
                                    "testID": undefined,
                                  },
                                  "type": "View",
                                },
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    {
                                      "$$typeof": Symbol(react.test.json),
                                      "children": [
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": ".0",
                                            "value": "0",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": ".1",
                                            "value": "1",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": ".2",
                                            "value": "2",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": ".3",
                                            "value": "3",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": ".4",
                                            "value": "4",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": ".5",
                                            "value": "5",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": ".6",
                                            "value": "6",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": ".7",
                                            "value": "7",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": ".8",
                                            "value": "8",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": ".9",
                                            "value": "9",
                                          },
                                          "type": "Picker.Item",
                                        },
                                      ],
                                      "props": {
                                        "itemStyle": {
                                          "height": 104,
                                        },
                                        "onValueChange": [Function],
                                        "selectedValue": "5",
                                        "style": {
                                          "backgroundColor": "#FFFFFF",
                                          "height": 104,
                                        },
                                      },
                                      "type": "Picker",
                                    },
                                  ],
                                  "props": {
                                    "onPointerEnter": [Function: AsyncFunction],
                                    "onPointerLeave": [Function: AsyncFunction],
                                    "style": {
                                      "width": "50%",
                                    },
                                    "testID": undefined,
                                  },
                                  "type": "View",
                                },
                              ],
                              "props": {
                                "onPointerEnter": [Function: AsyncFunction],
                                "onPointerLeave": [Function: AsyncFunction],
                                "style": {
                                  "display": "flex",
                                  "flexDirection": "row",
                                  "width": "100%",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "onPointerEnter": [Function: AsyncFunction],
                            "onPointerLeave": [Function: AsyncFunction],
                            "style": {
                              "marginBottom": 48,
                              "paddingLeft": 16,
                              "paddingRight": 16,
                              "width": "100%",
                            },
                            "testID": undefined,
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "style": {
                          "marginTop": 0,
                          "maxHeight": 812,
                          "transform": [
                            {
                              "translateY": Value {
                                "_value": 0,
                                "addListener": [class Function],
                                "animate": [class Function],
                                "extractOffset": [class Function],
                                "flattenOffset": [class Function],
                                "interpolate": [class Function],
                                "removeAllListeners": [class Function],
                                "removeListener": [class Function],
                                "resetAnimation": [class Function],
                                "setOffset": [class Function],
                                "setValue": [class Function],
                                "stopAnimation": [class Function],
                                "stopTracking": [class Function],
                                "track": [class Function],
                              },
                            },
                          ],
                        },
                        "testID": undefined,
                      },
                      "type": "View",
                    },
                  ],
                  "props": {
                    "onLayout": [Function: AsyncFunction],
                    "style": [
                      {
                        "alignSelf": "center",
                        "backgroundColor": "white",
                        "width": "100%",
                      },
                      {
                        "borderRadius": 10,
                      },
                      undefined,
                      {
                        "boxShadow": "1.5px 2.5px 3.5px rgba(0, 0, 0, 0.2)",
                        "elevation": 5,
                        "maxHeight": 812,
                        "opacity": Value {
                          "_value": 0,
                          "addListener": [class Function],
                          "animate": [class Function],
                          "extractOffset": [class Function],
                          "flattenOffset": [class Function],
                          "interpolate": [class Function],
                          "removeAllListeners": [class Function],
                          "removeListener": [class Function],
                          "resetAnimation": [class Function],
                          "setOffset": [class Function],
                          "setValue": [class Function],
                          "stopAnimation": [class Function],
                          "stopTracking": [class Function],
                          "track": [class Function],
                        },
                        "transform": [
                          {
                            "translateY": Value {
                              "_value": 0,
                              "addListener": [class Function],
                              "animate": [class Function],
                              "extractOffset": [class Function],
                              "flattenOffset": [class Function],
                              "interpolate": [class Function],
                              "removeAllListeners": [class Function],
                              "removeListener": [class Function],
                              "resetAnimation": [class Function],
                              "setOffset": [class Function],
                              "setValue": [class Function],
                              "stopAnimation": [class Function],
                              "stopTracking": [class Function],
                              "track": [class Function],
                            },
                          },
                        ],
                        "zIndex": 11,
                      },
                    ],
                    "testID": undefined,
                  },
                  "type": "View",
                },
              ],
              "props": {
                "style": {
                  "width": "100%",
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "bounces": false,
            "contentContainerStyle": {
              "width": 375,
            },
            "keyboardShouldPersistTaps": undefined,
            "onMomentumScrollBegin": [Function: AsyncFunction],
            "onMomentumScrollEnd": [Function: AsyncFunction],
            "onScrollBeginDrag": [Function: AsyncFunction],
            "onTouchEnd": [Function],
            "scrollEnabled": false,
            "scrollEventThrottle": 5,
            "scrollsToTop": false,
            "showsVerticalScrollIndicator": false,
            "style": [
              {
                "backgroundColor": "transparent",
                "height": "100%",
                "width": "100%",
              },
              {
                "width": 375,
              },
            ],
          },
          "type": "FlatList",
        },
      ],
      "props": {
        "onLayout": [Function: AsyncFunction],
        "style": [
          {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          },
          {
            "opacity": Value {
              "_value": 0,
              "addListener": [class Function],
              "animate": [class Function],
              "extractOffset": [class Function],
              "flattenOffset": [class Function],
              "interpolate": [class Function],
              "removeAllListeners": [class Function],
              "removeListener": [class Function],
              "resetAnimation": [class Function],
              "setOffset": [class Function],
              "setValue": [class Function],
              "stopAnimation": [class Function],
              "stopTracking": [class Function],
              "track": [class Function],
            },
            "width": 375,
          },
        ],
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "animationType": "none",
    "onRequestClose": [Function],
    "onShow": undefined,
    "statusBarTranslucent": true,
    "supportedOrientations": [
      "portrait",
      "portrait-upside-down",
      "landscape",
      "landscape-left",
      "landscape-right",
    ],
    "transparent": true,
    "visible": false,
  },
  "type": "Modal",
}
`;

exports[`DecimalRangeActionSheet renders with different min/max range 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "style": undefined,
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "ref": {
              "current": null,
            },
            "style": {
              "left": 999999,
              "position": "absolute",
              "top": 999999,
            },
          },
          "type": "SafeAreaView",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "onTouchEnd": [Function],
                    "onTouchMove": [Function],
                    "onTouchStart": [Function],
                    "style": {
                      "backgroundColor": "black",
                      "height": "100%",
                      "opacity": 0.3,
                      "position": "absolute",
                      "width": "100%",
                      "zIndex": 1,
                    },
                    "testID": undefined,
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "aria-role": "button",
                        "onLongPress": [Function],
                        "onPress": [Function],
                        "style": {
                          "height": 933.8,
                          "width": "100%",
                        },
                      },
                      "type": "Pressable",
                    },
                  ],
                  "props": {
                    "onTouchEnd": [Function],
                    "onTouchMove": [Function],
                    "onTouchStart": [Function],
                    "style": {
                      "height": 933.8,
                      "width": "100%",
                      "zIndex": 10,
                    },
                    "testID": undefined,
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": [
                              {
                                "alignSelf": "center",
                                "backgroundColor": "#f0f0f0",
                                "borderRadius": 100,
                                "height": 6,
                                "marginVertical": 5,
                                "width": 45,
                              },
                              {
                                "backgroundColor": "#f0f0f0",
                              },
                            ],
                            "testID": undefined,
                          },
                          "type": "View",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    {
                                      "$$typeof": Symbol(react.test.json),
                                      "children": [
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": [
                                            {
                                              "$$typeof": Symbol(react.test.json),
                                              "children": [
                                                {
                                                  "$$typeof": Symbol(react.test.json),
                                                  "children": [
                                                    "Close",
                                                  ],
                                                  "props": {
                                                    "style": {
                                                      "color": "#092E3A",
                                                      "fontSize": 16,
                                                      "fontWeight": "700",
                                                    },
                                                  },
                                                  "type": "Text",
                                                },
                                              ],
                                              "props": {
                                                "style": {
                                                  "flexDirection": "row",
                                                },
                                                "testID": undefined,
                                              },
                                              "type": "View",
                                            },
                                          ],
                                          "props": {
                                            "style": {
                                              "flexDirection": "row",
                                            },
                                            "testID": undefined,
                                          },
                                          "type": "View",
                                        },
                                      ],
                                      "props": {
                                        "accessibilityHint": "Press to perform action",
                                        "accessibilityLabel": "Close",
                                        "accessibilityRole": "button",
                                        "accessibilityState": {
                                          "disabled": false,
                                        },
                                        "disabled": false,
                                        "onPress": [Function: debounced],
                                        "style": {
                                          "alignItems": "center",
                                          "alignSelf": "flex-start",
                                          "backgroundColor": "#0E9DCD",
                                          "borderColor": undefined,
                                          "borderRadius": 360,
                                          "borderWidth": undefined,
                                          "flexDirection": "column",
                                          "height": undefined,
                                          "justifyContent": "center",
                                          "paddingHorizontal": 20,
                                          "paddingVertical": 8,
                                          "width": "auto",
                                        },
                                        "testID": undefined,
                                      },
                                      "type": "PressableScale",
                                    },
                                  ],
                                  "props": {
                                    "onPointerEnter": [Function: AsyncFunction],
                                    "onPointerLeave": [Function: AsyncFunction],
                                    "style": {
                                      "width": "33%",
                                    },
                                    "testID": undefined,
                                  },
                                  "type": "View",
                                },
                              ],
                              "props": {
                                "onPointerEnter": [Function: AsyncFunction],
                                "onPointerLeave": [Function: AsyncFunction],
                                "style": {
                                  "alignItems": "flex-end",
                                  "flex": undefined,
                                  "width": "100%",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    {
                                      "$$typeof": Symbol(react.test.json),
                                      "children": [
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "50",
                                            "value": "50",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "51",
                                            "value": "51",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "52",
                                            "value": "52",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "53",
                                            "value": "53",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "54",
                                            "value": "54",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "55",
                                            "value": "55",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "56",
                                            "value": "56",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "57",
                                            "value": "57",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "58",
                                            "value": "58",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "59",
                                            "value": "59",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "60",
                                            "value": "60",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "61",
                                            "value": "61",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "62",
                                            "value": "62",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "63",
                                            "value": "63",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "64",
                                            "value": "64",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "65",
                                            "value": "65",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "66",
                                            "value": "66",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "67",
                                            "value": "67",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "68",
                                            "value": "68",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "69",
                                            "value": "69",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "70",
                                            "value": "70",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "71",
                                            "value": "71",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "72",
                                            "value": "72",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "73",
                                            "value": "73",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "74",
                                            "value": "74",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "75",
                                            "value": "75",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "76",
                                            "value": "76",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "77",
                                            "value": "77",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "78",
                                            "value": "78",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "79",
                                            "value": "79",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "80",
                                            "value": "80",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "81",
                                            "value": "81",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "82",
                                            "value": "82",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "83",
                                            "value": "83",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "84",
                                            "value": "84",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "85",
                                            "value": "85",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "86",
                                            "value": "86",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "87",
                                            "value": "87",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "88",
                                            "value": "88",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "89",
                                            "value": "89",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "90",
                                            "value": "90",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "91",
                                            "value": "91",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "92",
                                            "value": "92",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "93",
                                            "value": "93",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "94",
                                            "value": "94",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "95",
                                            "value": "95",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "96",
                                            "value": "96",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "97",
                                            "value": "97",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "98",
                                            "value": "98",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "99",
                                            "value": "99",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "100",
                                            "value": "100",
                                          },
                                          "type": "Picker.Item",
                                        },
                                      ],
                                      "props": {
                                        "itemStyle": {
                                          "height": 104,
                                        },
                                        "onValueChange": [Function],
                                        "selectedValue": "75",
                                        "style": {
                                          "backgroundColor": "#FFFFFF",
                                          "height": 104,
                                        },
                                      },
                                      "type": "Picker",
                                    },
                                  ],
                                  "props": {
                                    "onPointerEnter": [Function: AsyncFunction],
                                    "onPointerLeave": [Function: AsyncFunction],
                                    "style": {
                                      "width": "50%",
                                    },
                                    "testID": undefined,
                                  },
                                  "type": "View",
                                },
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    {
                                      "$$typeof": Symbol(react.test.json),
                                      "children": [
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": ".0",
                                            "value": "0",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": ".1",
                                            "value": "1",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": ".2",
                                            "value": "2",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": ".3",
                                            "value": "3",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": ".4",
                                            "value": "4",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": ".5",
                                            "value": "5",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": ".6",
                                            "value": "6",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": ".7",
                                            "value": "7",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": ".8",
                                            "value": "8",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": ".9",
                                            "value": "9",
                                          },
                                          "type": "Picker.Item",
                                        },
                                      ],
                                      "props": {
                                        "itemStyle": {
                                          "height": 104,
                                        },
                                        "onValueChange": [Function],
                                        "selectedValue": "3",
                                        "style": {
                                          "backgroundColor": "#FFFFFF",
                                          "height": 104,
                                        },
                                      },
                                      "type": "Picker",
                                    },
                                  ],
                                  "props": {
                                    "onPointerEnter": [Function: AsyncFunction],
                                    "onPointerLeave": [Function: AsyncFunction],
                                    "style": {
                                      "width": "50%",
                                    },
                                    "testID": undefined,
                                  },
                                  "type": "View",
                                },
                              ],
                              "props": {
                                "onPointerEnter": [Function: AsyncFunction],
                                "onPointerLeave": [Function: AsyncFunction],
                                "style": {
                                  "display": "flex",
                                  "flexDirection": "row",
                                  "width": "100%",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "onPointerEnter": [Function: AsyncFunction],
                            "onPointerLeave": [Function: AsyncFunction],
                            "style": {
                              "marginBottom": 48,
                              "paddingLeft": 16,
                              "paddingRight": 16,
                              "width": "100%",
                            },
                            "testID": undefined,
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "style": {
                          "marginTop": 0,
                          "maxHeight": 812,
                          "transform": [
                            {
                              "translateY": Value {
                                "_value": 0,
                                "addListener": [class Function],
                                "animate": [class Function],
                                "extractOffset": [class Function],
                                "flattenOffset": [class Function],
                                "interpolate": [class Function],
                                "removeAllListeners": [class Function],
                                "removeListener": [class Function],
                                "resetAnimation": [class Function],
                                "setOffset": [class Function],
                                "setValue": [class Function],
                                "stopAnimation": [class Function],
                                "stopTracking": [class Function],
                                "track": [class Function],
                              },
                            },
                          ],
                        },
                        "testID": undefined,
                      },
                      "type": "View",
                    },
                  ],
                  "props": {
                    "onLayout": [Function: AsyncFunction],
                    "style": [
                      {
                        "alignSelf": "center",
                        "backgroundColor": "white",
                        "width": "100%",
                      },
                      {
                        "borderRadius": 10,
                      },
                      undefined,
                      {
                        "boxShadow": "1.5px 2.5px 3.5px rgba(0, 0, 0, 0.2)",
                        "elevation": 5,
                        "maxHeight": 812,
                        "opacity": Value {
                          "_value": 0,
                          "addListener": [class Function],
                          "animate": [class Function],
                          "extractOffset": [class Function],
                          "flattenOffset": [class Function],
                          "interpolate": [class Function],
                          "removeAllListeners": [class Function],
                          "removeListener": [class Function],
                          "resetAnimation": [class Function],
                          "setOffset": [class Function],
                          "setValue": [class Function],
                          "stopAnimation": [class Function],
                          "stopTracking": [class Function],
                          "track": [class Function],
                        },
                        "transform": [
                          {
                            "translateY": Value {
                              "_value": 0,
                              "addListener": [class Function],
                              "animate": [class Function],
                              "extractOffset": [class Function],
                              "flattenOffset": [class Function],
                              "interpolate": [class Function],
                              "removeAllListeners": [class Function],
                              "removeListener": [class Function],
                              "resetAnimation": [class Function],
                              "setOffset": [class Function],
                              "setValue": [class Function],
                              "stopAnimation": [class Function],
                              "stopTracking": [class Function],
                              "track": [class Function],
                            },
                          },
                        ],
                        "zIndex": 11,
                      },
                    ],
                    "testID": undefined,
                  },
                  "type": "View",
                },
              ],
              "props": {
                "style": {
                  "width": "100%",
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "bounces": false,
            "contentContainerStyle": {
              "width": 375,
            },
            "keyboardShouldPersistTaps": undefined,
            "onMomentumScrollBegin": [Function: AsyncFunction],
            "onMomentumScrollEnd": [Function: AsyncFunction],
            "onScrollBeginDrag": [Function: AsyncFunction],
            "onTouchEnd": [Function],
            "scrollEnabled": false,
            "scrollEventThrottle": 5,
            "scrollsToTop": false,
            "showsVerticalScrollIndicator": false,
            "style": [
              {
                "backgroundColor": "transparent",
                "height": "100%",
                "width": "100%",
              },
              {
                "width": 375,
              },
            ],
          },
          "type": "FlatList",
        },
      ],
      "props": {
        "onLayout": [Function: AsyncFunction],
        "style": [
          {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          },
          {
            "opacity": Value {
              "_value": 0,
              "addListener": [class Function],
              "animate": [class Function],
              "extractOffset": [class Function],
              "flattenOffset": [class Function],
              "interpolate": [class Function],
              "removeAllListeners": [class Function],
              "removeListener": [class Function],
              "resetAnimation": [class Function],
              "setOffset": [class Function],
              "setValue": [class Function],
              "stopAnimation": [class Function],
              "stopTracking": [class Function],
              "track": [class Function],
            },
            "width": 375,
          },
        ],
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "animationType": "none",
    "onRequestClose": [Function],
    "onShow": undefined,
    "statusBarTranslucent": true,
    "supportedOrientations": [
      "portrait",
      "portrait-upside-down",
      "landscape",
      "landscape-left",
      "landscape-right",
    ],
    "transparent": true,
    "visible": false,
  },
  "type": "Modal",
}
`;
